--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,6 @@
 plugins:
-  mailgun_api_key:
-    default: your_mailgun_api_key
+  postal_webhook_public_key:
+    default: your_postal_webhook_public_key
     client: false
   discourse_base_url:
     default: https://some-url.com
